# cashmate

./: .env.example  Dockerfile  README.md  ai_parser.py  db.py  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  telegram_bot.py  test_db.py  test_parser.py  utils.py
config/: transaction_prompt.txt
docs/: API.md  SETUP.md  USAGE.md
scripts/: deploy.sh  init_db.py
src/: __init__.py  config.py
src/bot/: __init__.py  keyboards.py  main.py
src/bot/handlers/: __init__.py  expense.py  report.py  settings.py  start.py
src/core/: __init__.py  database.py  models.py
src/services/: __init__.py  expense_manager.py  nlp_processor.py  report_generator.py
src/utils/: __init__.py  formatters.py  helpers.py  validators.py
tests/: __init__.py  conftest.py  test_utils.py
